// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compile * of ints 1`] = `"const x = 1 * 2;"`;

exports[`compile + of ints 1`] = `"const x = 1 + 2;"`;

exports[`compile float constants 1`] = `"const x = "abc";"`;

exports[`compile int constants 1`] = `"const x = 42;"`;

exports[`function calls with args 1`] = `
"const f = 0;

const y = f(1, 2);"
`;

exports[`function calls with no args 1`] = `
"const f = 0;

const y = f();"
`;

exports[`precedence between * and + (2) 1`] = `"const x = 1 + 2 * 3;"`;

exports[`precedence between * and + 1`] = `"const x = (1 + 2) * 3;"`;

exports[`refer to previously defined idents 1`] = `
"const x = 0;

const y = x;"
`;
